--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "clsx": "^2.1.1",
+    "mongoose": "^8.16.0",
     "motion": "^12.18.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
@@ -18,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "sass": "^1.89.1",
     "slick-carousel": "^1.8.1",
