--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
+    "react-toastify": "^11.0.5",
     "sass": "^1.89.1",
     "slick-carousel": "^1.8.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
