--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/components/contents/home/inputPost"
+    "src/types/next-auth.d.ts"
   ],
   "exclude": ["node_modules"]
 }
