--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "howler": "^2.2.4",
     "mongoose": "^8.16.0",
     "motion": "^12.18.1",
     "next": "15.3.3",
