--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@reduxjs/toolkit": "^2.8.2",
-    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "howler": "^2.2.4",
-    "mongoose": "^8.16.0",
+    "mediasoup-client": "^3.12.5",
     "motion": "^12.18.1",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
@@ -28,13 +27,13 @@
     "react-toastify": "^11.0.5",
     "sass": "^1.89.1",
     "slick-carousel": "^1.8.1",
-    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/howler": "^2.2.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
